--- a/arduino-core/src/processing/app/i18n/Resources_hu.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_hu.properties
@@ -11,9 +11,10 @@
 # Translators:
 # Translators:
 # benewfy <benewfy@gmail.com>, 2015
+# J\u00e1ni M\u00e1ty\u00e1s <jani.matyas@gmail.com>, 2015
 # Melinda <ghostgirl1983@gmail.com>, 2014
 # Cseh Robert <tavir@tavir.hu>, 2012
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-12-01 00\:12+0000\nLast-Translator\: benewfy <benewfy@gmail.com>\nLanguage-Team\: Hungarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/hu/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: hu\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-12-10 01\:03+0000\nLast-Translator\: benewfy <benewfy@gmail.com>\nLanguage-Team\: Hungarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/hu/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: hu\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=(Arduino \u00fajraind\u00edt\u00e1sa sz\u00fcks\u00e9ges)
@@ -27,10 +28,10 @@
 \ Used\:\ {0}=Haszn\u00e1lt\: {0}
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:558
-!'Keyboard'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Keyboard.h>'?=
+'Keyboard'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Keyboard.h>'?='Keyboard' nem tal\u00e1lhat\u00f3\! Ellen\u0151rizze, hogy a v\u00e1zlat tartalmazza-e a '\#include <Keyboard.h>' sort\!
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:553
-!'Mouse'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Mouse.h>'?=
+'Mouse'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Mouse.h>'?='Mouse' nem tal\u00e1lhat\u00f3\! Ellen\u0151rizze, hogy a v\u00e1zlat tartalmazza-e a '\#include <Mouse.h>' sort\!
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:61
 'arch'\ folder\ is\ no\ longer\ supported\!\ See\ http\://goo.gl/gfFJzU\ for\ more\ information=Az 'arch' mappa a tov\u00e1bbiakban nem t\u00e1mogatott\! Tov\u00e1bbi inform\u00e1ci\u00f3k\u00e9rt l\u00e1togassa meg a http\://goo.gl/gfFJzU -t
@@ -45,22 +46,22 @@
 --curdir\ no\ longer\ supported=--curdir tov\u00e1bbiakban nem t\u00e1mogatott
 
 #: ../../../processing/app/Base.java:468
-!--verbose,\ --verbose-upload\ and\ --verbose-build\ can\ only\ be\ used\ together\ with\ --verify\ or\ --upload=
+--verbose,\ --verbose-upload\ and\ --verbose-build\ can\ only\ be\ used\ together\ with\ --verify\ or\ --upload=--verbose, --verbose-upload \u00e9s --verbose-build csak a --verify vagy --upload kapcsol\u00f3kkal egy\u00fcttesen haszn\u00e1lhat\u00f3
 
 #: Sketch.java:746
 .pde\ ->\ .ino=.pde -> .ino
 
 #: ../../../../../app/src/cc/arduino/contributions/ContributionsSelfCheck.java:64
 #, java-format
-!<br/>Update\ available\ for\ some\ of\ your\ {0}boards{1}=
+<br/>Update\ available\ for\ some\ of\ your\ {0}boards{1}=<br/>Friss\u00edt\u00e9s \u00e9rhet\u0151 el n\u00e9h\u00e1ny {0}alaplaphoz{1}
 
 #: ../../../../../app/src/cc/arduino/contributions/ContributionsSelfCheck.java:66
 #, java-format
-!<br/>Update\ available\ for\ some\ of\ your\ {0}boards{1}\ and\ {2}libraries{3}=
+<br/>Update\ available\ for\ some\ of\ your\ {0}boards{1}\ and\ {2}libraries{3}=<br/>Friss\u00edt\u00e9s \u00e9rhet\u0151 el n\u00e9h\u00e1ny {0}alaplaphoz{1] \u00e9s {2}k\u00f6nyvt\u00e1rhoz{3}
 
 #: ../../../../../app/src/cc/arduino/contributions/ContributionsSelfCheck.java:62
 #, java-format
-!<br/>Update\ available\ for\ some\ of\ your\ {0}libraries{1}=
+<br/>Update\ available\ for\ some\ of\ your\ {0}libraries{1}=Friss\u00edt\u00e9s \u00e9rhet\u0151 el n\u00e9h\u00e1ny {0}k\u00f6nyvt\u00e1rhoz{1}
 
 #: Editor.java:2053
 <html>\ <head>\ <style\ type\="text/css">b\ {\ font\:\ 13pt\ "Lucida\ Grande"\ }p\ {\ font\:\ 11pt\ "Lucida\ Grande";\ margin-top\:\ 8px\ }</style>\ </head><b>Do\ you\ want\ to\ save\ changes\ to\ this\ sketch<BR>\ before\ closing?</b><p>If\ you\ don't\ save,\ your\ changes\ will\ be\ lost.=<html> <head> <style type\="text/css">b { font\: 13pt "Lucida Grande" }p { font\: 11pt "Lucida Grande"; margin-top\: 8px }</style> </head><b>Szeretn\u00e9 menteni a v\u00e1ltoztat\u00e1sokat ezen a v\u00e1zlaton<BR> miel\u00f6tt bez\u00e1rn\u00e1?</b><p>Ha nem menti el, a v\u00e1ltoztat\u00e1sok elvesznek.
@@ -78,17 +79,17 @@ A\ folder\ named\ "{0}"\ already\ exists.\ Can't\ open\ sketch.="{0}" nev\u0171 
 A\ library\ named\ {0}\ already\ exists=Ezen a n\u00e9ven {0} k\u00f6nyvt\u00e1r m\u00e1r l\u00e9tezik
 
 #: UpdateCheck.java:103
-A\ new\ version\ of\ Arduino\ is\ available,\nwould\ you\ like\ to\ visit\ the\ Arduino\ download\ page?=El\u00e9rhet\u00f6 az Arduino \u00faj verzi\u00f3ja. Szeretn\u00e9d megl\u00e1togatni az Arduino let\u00f6lt\u00f6 oldal\u00e1t?
+A\ new\ version\ of\ Arduino\ is\ available,\nwould\ you\ like\ to\ visit\ the\ Arduino\ download\ page?=El\u00e9rhet\u00f6 az Arduino \u00faj verzi\u00f3ja. Szeretn\u00e9 megl\u00e1togatni az Arduino let\u00f6lt\u00f6 oldal\u00e1t?
 
 #: ../../../../../app/src/cc/arduino/contributions/BuiltInCoreIsNewerCheck.java:96
 #, java-format
-A\ newer\ {0}\ package\ is\ available=Egy \u00faj {0} csomag el\u00e9rhet\u0151
+A\ newer\ {0}\ package\ is\ available=El\u00e9rhet\u0151 egy \u00fajabb {0} csomag
 
 #: ../../../../../app/src/processing/app/Base.java:2307
 A\ subfolder\ of\ your\ sketchbook\ is\ not\ a\ valid\ library=A v\u00e1zlatf\u00fczet\u00e9nek egy almapp\u00e1ja nem egy \u00e9rv\u00e9nyes k\u00f6nyvt\u00e1r
 
 #: Editor.java:1116
-About\ Arduino=Arduinor\u00f3l
+About\ Arduino=Inform\u00e1ci\u00f3 az Arduino-r\u00f3l
 
 #: ../../../../../app/src/processing/app/Base.java:1177
 Add\ .ZIP\ Library...=.ZIP k\u00f6nyvt\u00e1r hozz\u00e1ad\u00e1sa...
@@ -97,10 +98,10 @@ Add\ .ZIP\ Library...=.ZIP k\u00f6nyvt\u00e1r hozz\u00e1ad\u00e1sa...
 Add\ File...=F\u00e1jl hozz\u00e1ad\u00e1sa...
 
 #: ../../../../../app/src/cc/arduino/view/preferences/AdditionalBoardsManagerURLTextArea.java:73
-!Additional\ Boards\ Manager\ URLs=
+Additional\ Boards\ Manager\ URLs=Tov\u00e1bbi Alaplap-kezel\u0151 URL-ek
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:268
-!Additional\ Boards\ Manager\ URLs\:\ =
+Additional\ Boards\ Manager\ URLs\:\ =Tov\u00e1bbi Alaplap-kezel\u0151 URL-ek\:
 
 #: ../../../../../app/src/processing/app/Preferences.java:161
 Afrikaans=Afrikaans
@@ -117,7 +118,7 @@ All=\u00d6sszes
 !An\ error\ occurred\ while\ trying\ to\ fix\ the\ file\ encoding.\nDo\ not\ attempt\ to\ save\ this\ sketch\ as\ it\ may\ overwrite\nthe\ old\ version.\ Use\ Open\ to\ re-open\ the\ sketch\ and\ try\ again.\n=
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:99
-!An\ error\ occurred\ while\ updating\ libraries\ index\!=
+An\ error\ occurred\ while\ updating\ libraries\ index\!=Hiba l\u00e9pett fel a k\u00f6nyt\u00e1r index friss\u00edt\u00e9sekor\!
 
 #: ../../../processing/app/BaseNoGui.java:528
 An\ error\ occurred\ while\ uploading\ the\ sketch=Egy hiba l\u00e9pett fel a v\u00e1zlat felt\u00f6lt\u00e9se k\u00f6zben
@@ -149,10 +150,10 @@ Archive\ sketch\ as\:=V\u00e1zlat archiv\u00e1l\u00e1sa m\u00e1sk\u00e9nt\:
 Archive\ sketch\ canceled.=V\u00e1zlat archiv\u00e1l\u00e1sa megszak\u00edtva.
 
 #: tools/Archiver.java:75
-!Archiving\ the\ sketch\ has\ been\ canceled\ because\nthe\ sketch\ couldn't\ save\ properly.=
+Archiving\ the\ sketch\ has\ been\ canceled\ because\nthe\ sketch\ couldn't\ save\ properly.=A v\u00e1zlat archiv\u00e1l\u00e1sa megszak\u00edtva, mert\nnem menthet\u0151 megfelel\u0151en.
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:24
-!Arduino=
+Arduino=Arduino
 
 #: ../../../processing/app/I18n.java:83
 Arduino\ ARM\ (32-bits)\ Boards=Arduino ARM (32-bit) Alaplapok
@@ -249,10 +250,10 @@ Board=Alaplap
 Board\:\ =Alaplap\:
 
 #: ../../../../../app/src/cc/arduino/contributions/packages/ui/ContributionManagerUI.java:89
-!Boards\ Manager=
+Boards\ Manager=Alaplap-kezel\u0151
 
 #: ../../../../../app/src/processing/app/Base.java:1320
-!Boards\ Manager...=
+Boards\ Manager...=Alaplap-kezel\u0151...
 
 #: ../../../../../app/src/cc/arduino/contributions/packages/ui/ContributedPlatformTableCell.java:328
 !Boards\ included\ in\ this\ package\:=
@@ -271,7 +272,7 @@ Both\ NL\ &\ CR=Soremel\u00e9s \u00e9s kocsivissza
 Browse=B\u00f6ng\u00e9sz\u00e9s
 
 #: ../../../processing/app/Sketch.java:1530
-!Build\ options\ changed,\ rebuilding\ all=
+Build\ options\ changed,\ rebuilding\ all=Build be\u00e1ll\u00edt\u00e1sok megv\u00e1ltoztak, teljes \u00fajra\u00e9p\u00edt\u00e9s sz\u00fcks\u00e9ges
 
 #: ../../../../../app/src/processing/app/Base.java:1210
 Built-in\ Examples=Be\u00e9p\u00edtett P\u00e9ld\u00e1k
@@ -297,7 +298,7 @@ CRC\ doesn't\ match.\ File\ is\ corrupted.=CRC nem egyezik. A f\u00e1jl s\u00e9r
 
 #: ../../../processing/app/BaseNoGui.java:504
 #: ../../../processing/app/BaseNoGui.java:549
-!Can't\ find\ the\ sketch\ in\ the\ specified\ path=
+Can't\ find\ the\ sketch\ in\ the\ specified\ path=Nem tal\u00e1lhat\u00f3 a skicc a megadott \u00fatvonalon
 
 #: ../../../processing/app/Preferences.java:92
 Canadian\ French=Kanadai francia
@@ -331,13 +332,13 @@ Chinese\ (Taiwan)=K\u00ednai (Tajvan)
 Chinese\ (Taiwan)\ (Big5)=K\u00ednai (Tajvan) (Big5)
 
 #: ../../../../../app/src/cc/arduino/view/preferences/AdditionalBoardsManagerURLTextArea.java:98
-!Click\ for\ a\ list\ of\ unofficial\ boards\ support\ URLs=
+Click\ for\ a\ list\ of\ unofficial\ boards\ support\ URLs=Kattintson a nem hivatalos alaplap-t\u00e1mogat\u00e1si URL-ek list\u00e1j\u00e1\u00e9rt
 
 #: Editor.java:521 Editor.java:2024
 Close=Bez\u00e1r\u00e1s
 
 #: Editor.java:1208 Editor.java:2749
-!Comment/Uncomment=
+Comment/Uncomment=Megjegyz\u00e9s/-visszavon\u00e1s
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:30
 Communication=Kommunik\u00e1ci\u00f3
@@ -349,7 +350,7 @@ Compiler\ warnings\:\ =Ford\u00edt\u00f3program figyelmeztet\u00e9sek\:
 Compiling\ sketch...=V\u00e1zlat ford\u00edt\u00e1sa...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:27
-!Contributed=
+Contributed=Hozz\u00e1adott
 
 #: Editor.java:1157 Editor.java:2707
 Copy=M\u00e1sol\u00e1s
@@ -529,17 +530,17 @@ Done\ uploading.=Fel\u00f6lt\u00e9s k\u00e9sz.
 Downloaded\ {0}kb\ of\ {1}kb.=Let\u00f6ltve {0}kb ebb\u0151l\: {1}kb.
 
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:107
-!Downloading\ boards\ definitions.=
+Downloading\ boards\ definitions.=Alaplap defin\u00edci\u00f3k let\u00f6lt\u00e9se.
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:86
-!Downloading\ libraries\ index...=
+Downloading\ libraries\ index...=K\u00f6nyvt\u00e1r-index let\u00f6lt\u00e9se...
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:115
 #, java-format
 Downloading\ library\:\ {0}=K\u00f6nyvt\u00e1r let\u00f6lt\u00e9se\: {0}
 
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:318
-!Downloading\ platforms\ index...=
+Downloading\ platforms\ index...=Platform-index let\u00f6lt\u00e9se...
 
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:113
 #, java-format
@@ -574,10 +575,10 @@ English\ (United\ Kingdom)=Angol (Egyes\u00fclt Kir\u00e1lys\u00e1g)
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:269
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:271
-!Enter\ a\ comma\ separated\ list\ of\ urls=
+Enter\ a\ comma\ separated\ list\ of\ urls=Adjon meg egy vessz\u0151vel elv\u00e1lasztott URL list\u00e1t
 
 #: ../../../../../app/src/cc/arduino/view/preferences/AdditionalBoardsManagerURLTextArea.java:96
-!Enter\ additional\ URLs,\ one\ for\ each\ row=
+Enter\ additional\ URLs,\ one\ for\ each\ row=Adja meg a tov\u00e1bbi URL-eket, soronk\u00e9nt egyet
 
 #: Editor.java:1062
 Environment=K\u00f6rnyezet
@@ -628,10 +629,10 @@ Error\ reading\ the\ preferences\ file.\ Please\ delete\ (or\ move)\n{0}\ and\ r
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:146
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:166
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:245
-!Error\ running\ post\ install\ script=
+Error\ running\ post\ install\ script=Hiba a telep\u00edt\u00e9s ut\u00e1ni script futtat\u00e1sakor
 
 #: ../../../cc/arduino/packages/DiscoveryManager.java:25
-!Error\ starting\ discovery\ method\:\ =
+Error\ starting\ discovery\ method\:\ =Hiba a felder\u00edt\u0151 elj\u00e1r\u00e1s ind\u00edt\u00e1sakor\:
 
 #: Serial.java:125
 #, java-format
@@ -688,10 +689,10 @@ Examples\ from\ Custom\ Libraries=P\u00e9ld\u00e1k Egy\u00e9ni K\u00f6nyvt\u00e1
 Examples\ from\ Libraries=P\u00e9ld\u00e1k K\u00f6nyvt\u00e1rakb\u00f3l
 
 #: ../../../../../app/src/processing/app/Editor.java:753
-!Export\ canceled,\ changes\ must\ first\ be\ saved.=
+Export\ canceled,\ changes\ must\ first\ be\ saved.=Export\u00e1l\u00e1s megszak\u00edtva, a v\u00e1ltoz\u00e1soknak el\u0151sz\u00f6r mentve kell lenni\u00fck.
 
 #: ../../../../../app/src/processing/app/Editor.java:750
-!Export\ compiled\ Binary=
+Export\ compiled\ Binary=Leford\u00edtott bin\u00e1ris export\u00e1l\u00e1sa
 
 #: ../../../processing/app/Base.java:416
 #, java-format
@@ -704,7 +705,7 @@ File=F\u00e1jl
 Filipino=Filipp\u00edn\u00f3
 
 #: ../../../../../app/src/cc/arduino/contributions/ui/InstallerJDialog.java:95
-!Filter\ your\ search...=
+Filter\ your\ search...=Keres\u00e9s sz\u0171r\u00e9se...
 
 #: FindReplace.java:124 FindReplace.java:127
 Find=Keres\u00e9s
@@ -716,13 +717,13 @@ Find\ Next=K\u00f6vetkez\u0151 keres\u00e9se
 Find\ Previous=El\u0151z\u0151 keres\u00e9se
 
 #: Editor.java:1086 Editor.java:2775
-!Find\ in\ Reference=
+Find\ in\ Reference=Keres\u00e9s a k\u00e9zik\u00f6nyvben
 
 #: Editor.java:1234
 Find...=Keres\u00e9s...
 
 #: FindReplace.java:80
-!Find\:=
+Find\:=Keresend\u0151\:
 
 #: ../../../processing/app/Preferences.java:147
 Finnish=Finn
@@ -736,7 +737,7 @@ Fix\ Encoding\ &\ Reload=K\u00f3dol\u00e1s Jav\u00edt\u00e1sa & \u00dajrat\u00f6
 
 #: ../../../cc/arduino/packages/uploaders/SerialUploader.java:118
 #, java-format
-!Forcing\ reset\ using\ 1200bps\ open/close\ on\ port\ {0}=
+Forcing\ reset\ using\ 1200bps\ open/close\ on\ port\ {0}=K\u00e9nyszer\u00edtett Reset 1200bps-es nyit\u00e1s/z\u00e1r\u00e1ssal a {0} porton
 
 #: Preferences.java:95
 French=Francia
@@ -760,7 +761,7 @@ Georgian=Gr\u00faz
 German=N\u00e9met
 
 #: Editor.java:1054
-!Getting\ Started=
+Getting\ Started=Kezdetek
 
 #: ../../../processing/app/Sketch.java:1646
 #, java-format
@@ -1363,7 +1364,7 @@ Sketchbook\ folder\ disappeared=A v\u00e1zlatf\u00fczet mappa elt\u0171nt
 Sketchbook\ location\:=V\u00e1zlatf\u00fczet helye\:
 
 #: ../../../processing/app/BaseNoGui.java:428
-!Sketchbook\ path\ not\ defined=
+Sketchbook\ path\ not\ defined=A v\u00e1zlatf\u00fczet helye nincs meghat\u00e1rozva
 
 #: ../../../../../app/src/processing/app/Preferences.java:185
 Slovak=Szlov\u00e1k
@@ -1400,7 +1401,7 @@ Swedish=Sv\u00e9d
 System\ Default=Rendszer Alap\u00e9rtelmezett
 
 #: ../../../../../app/src/processing/app/Preferences.java:188
-!Talossan=
+Talossan=Talossan
 
 #: Preferences.java:116
 Tamil=Tamil
@@ -1470,7 +1471,7 @@ The\ sketchbook\ folder\ no\ longer\ exists.\nArduino\ will\ switch\ to\ the\ de
 Time\ for\ a\ Break=Itt az id\u0151 sz\u00fcnetet tartani
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:34
-!Timing=
+Timing=Id\u0151z\u00edt\u00e9s
 
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:94
 #, java-format
