--- a/arduino-core/src/processing/app/i18n/Resources_pt_BR.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_pt_BR.properties
@@ -18,7 +18,7 @@
 # Philipe Rabelo <philipe_elvis_preslei@hotmail.com>, 2013
 # Rafael H L Moretti <rafael.moretti@gmail.com>, 2014
 # Tiago Goto Sala, 2014
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-18 16\:15+0000\nLast-Translator\: Federico Fissore <f.fissore@arduino.cc>\nLanguage-Team\: Portuguese (Brazil) (http\://www.transifex.com/mbanzi/arduino-ide-15/language/pt_BR/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: pt_BR\nPlural-Forms\: nplurals\=2; plural\=(n > 1);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-12-07 01\:07+0000\nLast-Translator\: Everton Leite <etcholeite@gmail.com>\nLanguage-Team\: Portuguese (Brazil) (http\://www.transifex.com/mbanzi/arduino-ide-15/language/pt_BR/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: pt_BR\nPlural-Forms\: nplurals\=2; plural\=(n > 1);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=(requer reinicializa\u00e7\u00e3o do Arduino)
@@ -32,10 +32,10 @@
 \ Used\:\ {0}=Usado\: {0}
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:558
-!'Keyboard'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Keyboard.h>'?=
+'Keyboard'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Keyboard.h>'?='Keyboard' n\u00e3o encontrado. Existe a linha '\#include <Keyboard.h>' no seu sketch?
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:553
-!'Mouse'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Mouse.h>'?=
+'Mouse'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Mouse.h>'?='Mouse' n\u00e3o encontrado. Existe a linha '\#include <Mouse.h>' no seu sketch?
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:61
 'arch'\ folder\ is\ no\ longer\ supported\!\ See\ http\://goo.gl/gfFJzU\ for\ more\ information=A pasta 'arch' n\u00e3o \u00e9 mais suportada\! Para mais informa\u00e7\u00f5es, acesse http\://goo.gl/gfFJzU
@@ -157,7 +157,7 @@ Archive\ sketch\ canceled.=Arquivo de sketch cancelado.
 Archiving\ the\ sketch\ has\ been\ canceled\ because\nthe\ sketch\ couldn't\ save\ properly.=O arquivo do sketch foi cancelado porque\no sketch n\u00e3o p\u00f4de ser salvo corretamente.
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:24
-!Arduino=
+Arduino=Arduino
 
 #: ../../../processing/app/I18n.java:83
 Arduino\ ARM\ (32-bits)\ Boards=Placas Arduino ARM (32-bits)
@@ -345,7 +345,7 @@ Close=Fechar
 Comment/Uncomment=Comentar/descomentar
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:30
-!Communication=
+Communication=Comunica\u00e7\u00e3o
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:266
 Compiler\ warnings\:\ =Avisos do compilador\:
@@ -354,7 +354,7 @@ Compiler\ warnings\:\ =Avisos do compilador\:
 Compiling\ sketch...=Compilando sketch...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:27
-!Contributed=
+Contributed=Contribuiu
 
 #: Editor.java:1157 Editor.java:2707
 Copy=Copiar
@@ -471,10 +471,10 @@ Czech\ (Czech\ Republic)=Czech (Rep\u00fablica Tcheca)
 Danish\ (Denmark)=Dinamarqu\u00eas (Dinamarca)
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:36
-!Data\ Processing=
+Data\ Processing=Processamento de Dados
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:35
-!Data\ Storage=
+Data\ Storage=Armazenamento de Dados
 
 #: Editor.java:1224 Editor.java:2765
 Decrease\ Indent=Diminuir identa\u00e7\u00e3o
@@ -486,7 +486,7 @@ Default=Padr\u00e3o
 Delete=Apagar
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:33
-!Device\ Control=
+Device\ Control=Controle de Dispositivo
 
 #: debug/Uploader.java:199
 Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\ RESET\ the\ board\ right\ before\ exporting=O dispositivo n\u00e3o est\u00e1 respondendo.  Confira se a porta serial \u00e9 a correta ou REINICIE a placa antes de exportar
@@ -495,7 +495,7 @@ Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\
 Discard\ all\ changes\ and\ reload\ sketch?=Descartar todas as altera\u00e7\u00f5es e recarregar o sketch?
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:29
-!Display=
+Display=Display
 
 #: ../../../processing/app/Preferences.java:438
 Display\ line\ numbers=Mostrar n\u00fameros de linhas
@@ -660,7 +660,7 @@ Error\ while\ printing.=Erro durante impress\u00e3o.
 
 #: ../../../../../arduino-core/src/processing/app/Serial.java:117
 #, java-format
-!Error\ while\ setting\ serial\ port\ parameters\:\ {0}\ {1}\ {2}\ {3}=
+Error\ while\ setting\ serial\ port\ parameters\:\ {0}\ {1}\ {2}\ {3}=Erro durante a configura\u00e7\u00e3o dos par\u00e2metros da porta serial\: {0} {1} {2} {3}
 
 #: ../../../processing/app/BaseNoGui.java:528
 Error\ while\ uploading=Erro durante o carregamento
@@ -889,7 +889,7 @@ Library\ Manager=Gerenciador de Biblioteca
 Library\ added\ to\ your\ libraries.\ Check\ "Include\ library"\ menu=Biblioteca adicionada \u00e0s suas bibliotecas. Veja o menu "Incluir biblioteca"
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:73
-!Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=
+Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=Bibliotecas n\u00e3o podem usar as pastas 'src' e 'utility' ao mesmo tempo. Verifique {0}
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:107
 #, java-format
@@ -1062,13 +1062,13 @@ Open\ an\ Arduino\ sketch...=Abrir um sketch Arduino...
 Open...=Abrir...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:37
-!Other=
+Other=Outro
 
 #: Editor.java:563
 Page\ Setup=Configura\u00e7\u00e3o da p\u00e1gina
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:25
-!Partner=
+Partner=Parceiro
 
 #: ../../../processing/app/forms/PasswordAuthorizationDialog.java:44
 Password\:=Senha\:
@@ -1182,7 +1182,7 @@ Quit=Sair
 RETIRED=RETIRADO
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:26
-!Recommended=
+Recommended=Recomendado
 
 #: Editor.java:1138 Editor.java:1140 Editor.java:1390
 Redo=Refazer
@@ -1292,7 +1292,7 @@ Selected\ library\ is\ not\ available=A biblioteca selecionada n\u00e3o est\u00e
 Send=Enviar
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:32
-!Sensors=
+Sensors=Sensores
 
 #: EditorToolbar.java:41 EditorToolbar.java:46 Editor.java:669
 Serial\ Monitor=Monitor serial
@@ -1331,7 +1331,7 @@ Show\ verbose\ output\ during\ compilation=Mostrar sa\u00edda verbosa durante a 
 Show\ verbose\ output\ during\:\ =Mostrar mensagens de sa\u00edda durante\:
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:31
-!Signal\ Input/Output=
+Signal\ Input/Output=Sinal de Entrada/Sa\u00edda
 
 #: Editor.java:607
 Sketch=Sketch
@@ -1475,7 +1475,7 @@ This\ report\ would\ have\ more\ information\ with=Este relat\u00f3rio deveria t
 Time\ for\ a\ Break=Pausa para descanso
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:34
-!Timing=
+Timing=Temporiza\u00e7\u00e3o
 
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:94
 #, java-format
@@ -1531,7 +1531,7 @@ Unable\ to\ open\ serial\ plotter=N\u00e3o foi poss\u00edvel abrir o plotter ser
 Unable\ to\ reach\ Arduino.cc\ due\ to\ possible\ network\ issues.=N\u00e3o foi poss\u00edvel alcan\u00e7ar Arduino.cc devido a poss\u00edveis problemas de rede.
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:38
-!Uncategorized=
+Uncategorized=Sem categoria
 
 #: Editor.java:1133 Editor.java:1355
 Undo=Desfazer
@@ -1706,7 +1706,7 @@ You\ can't\ import\ a\ folder\ that\ contains\ your\ sketchbook=Voc\u00ea n\u00e
 You\ can't\ rename\ the\ sketch\ to\ "{0}"\nbecause\ the\ sketch\ already\ has\ a\ .cpp\ file\ with\ that\ name.=Voc\u00ea n\u00e3o pode renomear o sketch como "{0}"\nporque o sketch j\u00e1 tem um arquivo .cpp com este nome.
 
 #: ../../../../../app/src/processing/app/Sketch.java:659
-!You\ can't\ save\ the\ sketch\ as\ "{0}"\nbecause\ the\ sketch\ already\ has\ a\ file\ with\ that\ name.=
+You\ can't\ save\ the\ sketch\ as\ "{0}"\nbecause\ the\ sketch\ already\ has\ a\ file\ with\ that\ name.=Voc\u00ea n\u00e3o pode salvar o sketch como "{0}"\nporque o sketch j\u00e1 possui um arquivo com esse nome.
 
 #: Sketch.java:883
 You\ cannot\ save\ the\ sketch\ into\ a\ folder\ninside\ itself.\ This\ would\ go\ on\ forever.=Voc\u00ea n\u00e3o pode salvar o sketch em uma pasta\ndentro de si mesma. Isto iria acontecer infinitamente.
