--- a/arduino-core/src/processing/app/i18n/Resources_bg.po
+++ b/arduino-core/src/processing/app/i18n/Resources_bg.po
@@ -18,8 +18,8 @@ msgstr ""
 "Project-Id-Version: Arduino IDE 1.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-03-29 10:24-0400\n"
-"PO-Revision-Date: 2015-11-26 11:18+0000\n"
-"Last-Translator: Ivaylo Malinov <mals@mail.bg>\n"
+"PO-Revision-Date: 2015-12-10 21:08+0000\n"
+"Last-Translator: Valentin Laskov <laskov@festa.bg>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/mbanzi/arduino-ide-15/language/bg/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -659,7 +659,7 @@ msgstr "Danish (Denmark)"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:36
 msgid "Data Processing"
-msgstr ""
+msgstr "Обработка на данни"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:35
 msgid "Data Storage"
@@ -1196,7 +1196,7 @@ msgstr "Намерена невалидна библиотека в {0}: {1}"
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:66
 #, java-format
 msgid "Invalid quoting: no closing [{0}] char found."
-msgstr ""
+msgstr "Невалиден текст: липсва затварящ [{0}] знак."
 
 #: Preferences.java:102
 msgid "Italian"
@@ -1220,11 +1220,11 @@ msgstr "Мениджър библиотеки"
 
 #: ../../../../../app/src/processing/app/Base.java:2349
 msgid "Library added to your libraries. Check \"Include library\" menu"
-msgstr ""
+msgstr "Библиотеката е добавена към Вашите библиотеки. Вижте менюто \"Включване на библиотека\""
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:73
 msgid "Library can't use both 'src' and 'utility' folders. Double check {0}"
-msgstr ""
+msgstr "Библиотеката не може да ползва едновременно папките 'src' и 'utility'. Проверете отново {0}"
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:107
 #, java-format
@@ -1246,7 +1246,7 @@ msgstr "Зареждане на конфигурацията..."
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:73
 #, java-format
 msgid "Looking for recipes like {0}*{1}"
-msgstr ""
+msgstr "Търсене на рецепти като {0}*{1}"
 
 #: ../../../processing/app/Sketch.java:1684
 msgid "Low memory available, stability problems may occur."
@@ -1271,7 +1271,7 @@ msgstr "Съобщение"
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:81
 #, java-format
 msgid "Missing '{0}' from library in {1}"
-msgstr ""
+msgstr "Липсващ '{0}' от библиотека в {1}"
 
 #: ../../../processing/app/BaseNoGui.java:455
 msgid "Mode not supported"
@@ -1296,7 +1296,7 @@ msgstr "Множество файлове не се поддържат"
 #: ../../../processing/app/debug/Compiler.java:520
 #, java-format
 msgid "Multiple libraries were found for \"{0}\""
-msgstr ""
+msgstr "Намерени са няколко библиотеки за \"{0}\""
 
 #: ../../../processing/app/Base.java:395
 msgid "Must specify exactly one sketch file"
@@ -1344,7 +1344,7 @@ msgstr "Не"
 
 #: ../../../processing/app/debug/Compiler.java:158
 msgid "No authorization data found"
-msgstr ""
+msgstr "Не са намерени данни за удостоверяване"
 
 #: tools/format/src/AutoFormat.java:54 tools/AutoFormat.java:916
 msgid "No changes necessary for Auto Format."
@@ -1356,7 +1356,7 @@ msgstr "Не са намерени параметри в командния ре
 
 #: ../../../processing/app/debug/Compiler.java:200
 msgid "No compiled sketch found"
-msgstr ""
+msgstr "Не е намерена компилирана скица"
 
 #: Editor.java:373
 msgid "No files were added to the sketch."
@@ -1487,11 +1487,11 @@ msgstr "Платформа {0} (пакет {1}) е непознат"
 
 #: ../../../../../app/src/cc/arduino/contributions/packages/ui/ContributionManagerUI.java:195
 msgid "Please confirm boards deletion"
-msgstr ""
+msgstr "Моля, потвърдете изтриването на платката"
 
 #: ../../../../../app/src/cc/arduino/contributions/libraries/ui/LibraryManagerUI.java:257
 msgid "Please confirm library deletion"
-msgstr ""
+msgstr "Моля, потвърдете изтриването на библиотеката"
 
 #: debug/Compiler.java:408
 msgid "Please import the SPI library from the Sketch > Import Library menu."
@@ -1536,7 +1536,7 @@ msgstr "Предпочитания"
 
 #: ../../../../../app/src/processing/app/Base.java:297
 msgid "Preparing boards..."
-msgstr ""
+msgstr "Подготовка на платки..."
 
 #: FindReplace.java:123 FindReplace.java:128
 msgid "Previous"
@@ -1603,7 +1603,7 @@ msgstr "Програматор"
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:80
 #, java-format
 msgid "Progress {0}"
-msgstr ""
+msgstr "Напредък {0}"
 
 #: Base.java:783 Editor.java:593
 msgid "Quit"
