--- a/arduino-core/src/processing/app/i18n/Resources_bg.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_bg.properties
@@ -13,7 +13,7 @@
 # Anton Stoychev <antitoxic@gmail.com>, 2013
 # Ivaylo Malinov <mals@mail.bg>, 2015
 # Valentin Laskov <laskov@festa.bg>, 2012-2015
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-26 11\:18+0000\nLast-Translator\: Ivaylo Malinov <mals@mail.bg>\nLanguage-Team\: Bulgarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/bg/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: bg\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-12-10 21\:08+0000\nLast-Translator\: Valentin Laskov <laskov@festa.bg>\nLanguage-Team\: Bulgarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/bg/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: bg\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=\  (\u0438\u0437\u0438\u0441\u043a\u0432\u0430 \u0440\u0435\u0441\u0442\u0430\u0440\u0442\u0438\u0440\u0430\u043d\u0435 \u043d\u0430 \u0410\u0440\u0434\u0443\u0438\u043d\u043e)
@@ -466,7 +466,7 @@ Czech\ (Czech\ Republic)=Czech (Czech Republic)
 Danish\ (Denmark)=Danish (Denmark)
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:36
-!Data\ Processing=
+Data\ Processing=\u041e\u0431\u0440\u0430\u0431\u043e\u0442\u043a\u0430 \u043d\u0430 \u0434\u0430\u043d\u043d\u0438
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:35
 Data\ Storage=\u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0435 \u0437\u0430 \u0434\u0430\u043d\u043d\u0438
@@ -863,7 +863,7 @@ Invalid\ library\ found\ in\ {0}\:\ {1}=\u041d\u0430\u043c\u0435\u0440\u0435\u04
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:66
 #, java-format
-!Invalid\ quoting\:\ no\ closing\ [{0}]\ char\ found.=
+Invalid\ quoting\:\ no\ closing\ [{0}]\ char\ found.=\u041d\u0435\u0432\u0430\u043b\u0438\u0434\u0435\u043d \u0442\u0435\u043a\u0441\u0442\: \u043b\u0438\u043f\u0441\u0432\u0430 \u0437\u0430\u0442\u0432\u0430\u0440\u044f\u0449 [{0}] \u0437\u043d\u0430\u043a.
 
 #: Preferences.java:102
 Italian=\u0418\u0442\u0430\u043b\u0438\u0430\u043d\u0441\u043a\u0438
@@ -881,10 +881,10 @@ Latvian=\u041b\u0430\u0442\u0432\u0438\u0439\u0441\u043a\u0438
 Library\ Manager=\u041c\u0435\u043d\u0438\u0434\u0436\u044a\u0440 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0438
 
 #: ../../../../../app/src/processing/app/Base.java:2349
-!Library\ added\ to\ your\ libraries.\ Check\ "Include\ library"\ menu=
+Library\ added\ to\ your\ libraries.\ Check\ "Include\ library"\ menu=\u0411\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430\u0442\u0430 \u0435 \u0434\u043e\u0431\u0430\u0432\u0435\u043d\u0430 \u043a\u044a\u043c \u0412\u0430\u0448\u0438\u0442\u0435 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0438. \u0412\u0438\u0436\u0442\u0435 \u043c\u0435\u043d\u044e\u0442\u043e "\u0412\u043a\u043b\u044e\u0447\u0432\u0430\u043d\u0435 \u043d\u0430 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430"
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:73
-!Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=
+Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=\u0411\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430\u0442\u0430 \u043d\u0435 \u043c\u043e\u0436\u0435 \u0434\u0430 \u043f\u043e\u043b\u0437\u0432\u0430 \u0435\u0434\u043d\u043e\u0432\u0440\u0435\u043c\u0435\u043d\u043d\u043e \u043f\u0430\u043f\u043a\u0438\u0442\u0435 'src' \u0438 'utility'. \u041f\u0440\u043e\u0432\u0435\u0440\u0435\u0442\u0435 \u043e\u0442\u043d\u043e\u0432\u043e {0}
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:107
 #, java-format
@@ -901,7 +901,7 @@ Loading\ configuration...=\u0417\u0430\u0440\u0435\u0436\u0434\u0430\u043d\u0435
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:73
 #, java-format
-!Looking\ for\ recipes\ like\ {0}*{1}=
+Looking\ for\ recipes\ like\ {0}*{1}=\u0422\u044a\u0440\u0441\u0435\u043d\u0435 \u043d\u0430 \u0440\u0435\u0446\u0435\u043f\u0442\u0438 \u043a\u0430\u0442\u043e {0}*{1}
 
 #: ../../../processing/app/Sketch.java:1684
 Low\ memory\ available,\ stability\ problems\ may\ occur.=\u0414\u043e\u0441\u0442\u044a\u043f\u043d\u0430\u0442\u0430 \u043f\u0430\u043c\u0435\u0442 \u0435 \u043c\u0430\u043b\u043a\u043e. \u0412\u044a\u0437\u043c\u043e\u0436\u043d\u0438 \u0441\u0430 \u043f\u0440\u043e\u0431\u043b\u0435\u043c\u0438.
@@ -920,7 +920,7 @@ Message=\u0421\u044a\u043e\u0431\u0449\u0435\u043d\u0438\u0435
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:81
 #, java-format
-!Missing\ '{0}'\ from\ library\ in\ {1}=
+Missing\ '{0}'\ from\ library\ in\ {1}=\u041b\u0438\u043f\u0441\u0432\u0430\u0449 '{0}' \u043e\u0442 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430 \u0432 {1}
 
 #: ../../../processing/app/BaseNoGui.java:455
 Mode\ not\ supported=\u0420\u0435\u0436\u0438\u043c\u044a\u0442 \u043d\u0435 \u0441\u0435 \u043f\u043e\u0434\u0434\u044a\u0440\u0436\u0430
@@ -939,7 +939,7 @@ Multiple\ files\ not\ supported=\u041c\u043d\u043e\u0436\u0435\u0441\u0442\u0432
 
 #: ../../../processing/app/debug/Compiler.java:520
 #, java-format
-!Multiple\ libraries\ were\ found\ for\ "{0}"=
+Multiple\ libraries\ were\ found\ for\ "{0}"=\u041d\u0430\u043c\u0435\u0440\u0435\u043d\u0438 \u0441\u0430 \u043d\u044f\u043a\u043e\u043b\u043a\u043e \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0438 \u0437\u0430 "{0}"
 
 #: ../../../processing/app/Base.java:395
 Must\ specify\ exactly\ one\ sketch\ file=\u0422\u0440\u044f\u0431\u0432\u0430 \u0434\u0430 \u0443\u043a\u0430\u0436\u0435\u0442\u0435 \u0442\u043e\u0447\u043d\u043e \u0435\u0434\u0438\u043d \u0444\u0430\u0439\u043b-\u0441\u043a\u0438\u0446\u0430
@@ -975,7 +975,7 @@ Next\ Tab=\u0421\u043b\u0435\u0434\u0432\u0430\u0449 \u043f\u043e\u0434\u043f\u0
 No=\u041d\u0435
 
 #: ../../../processing/app/debug/Compiler.java:158
-!No\ authorization\ data\ found=
+No\ authorization\ data\ found=\u041d\u0435 \u0441\u0430 \u043d\u0430\u043c\u0435\u0440\u0435\u043d\u0438 \u0434\u0430\u043d\u043d\u0438 \u0437\u0430 \u0443\u0434\u043e\u0441\u0442\u043e\u0432\u0435\u0440\u044f\u0432\u0430\u043d\u0435
 
 #: tools/format/src/AutoFormat.java:54 tools/AutoFormat.java:916
 No\ changes\ necessary\ for\ Auto\ Format.=\u041d\u0435 \u0441\u0430 \u043d\u0435\u043e\u0431\u0445\u043e\u0434\u0438\u043c\u0438 \u043f\u0440\u043e\u043c\u0435\u043d\u0438 \u0437\u0430 \u0430\u0432\u0442\u043e\u0444\u043e\u0440\u043c\u0430\u0442\u0438\u0440\u0430\u043d\u0435\u0442\u043e.
@@ -984,7 +984,7 @@ No\ changes\ necessary\ for\ Auto\ Format.=\u041d\u0435 \u0441\u0430 \u043d\u043
 No\ command\ line\ parameters\ found=\u041d\u0435 \u0441\u0430 \u043d\u0430\u043c\u0435\u0440\u0435\u043d\u0438 \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u0438 \u0432 \u043a\u043e\u043c\u0430\u043d\u0434\u043d\u0438\u044f \u0440\u0435\u0434
 
 #: ../../../processing/app/debug/Compiler.java:200
-!No\ compiled\ sketch\ found=
+No\ compiled\ sketch\ found=\u041d\u0435 \u0435 \u043d\u0430\u043c\u0435\u0440\u0435\u043d\u0430 \u043a\u043e\u043c\u043f\u0438\u043b\u0438\u0440\u0430\u043d\u0430 \u0441\u043a\u0438\u0446\u0430
 
 #: Editor.java:373
 No\ files\ were\ added\ to\ the\ sketch.=\u041d\u0435 \u0431\u044f\u0445\u0430 \u0434\u043e\u0431\u0430\u0432\u0435\u043d\u0438 \u0444\u0430\u0439\u043b\u043e\u0432\u0435 \u043a\u044a\u043c \u0441\u043a\u0438\u0446\u0430\u0442\u0430.
@@ -1082,10 +1082,10 @@ Persian\ (Iran)=\u041f\u0435\u0440\u0441\u0438\u0439\u0441\u043a\u0438 (\u0418\u
 Platform\ {0}\ (package\ {1})\ is\ unknown=\u041f\u043b\u0430\u0442\u0444\u043e\u0440\u043c\u0430 {0} (\u043f\u0430\u043a\u0435\u0442 {1}) \u0435 \u043d\u0435\u043f\u043e\u0437\u043d\u0430\u0442
 
 #: ../../../../../app/src/cc/arduino/contributions/packages/ui/ContributionManagerUI.java:195
-!Please\ confirm\ boards\ deletion=
+Please\ confirm\ boards\ deletion=\u041c\u043e\u043b\u044f, \u043f\u043e\u0442\u0432\u044a\u0440\u0434\u0435\u0442\u0435 \u0438\u0437\u0442\u0440\u0438\u0432\u0430\u043d\u0435\u0442\u043e \u043d\u0430 \u043f\u043b\u0430\u0442\u043a\u0430\u0442\u0430
 
 #: ../../../../../app/src/cc/arduino/contributions/libraries/ui/LibraryManagerUI.java:257
-!Please\ confirm\ library\ deletion=
+Please\ confirm\ library\ deletion=\u041c\u043e\u043b\u044f, \u043f\u043e\u0442\u0432\u044a\u0440\u0434\u0435\u0442\u0435 \u0438\u0437\u0442\u0440\u0438\u0432\u0430\u043d\u0435\u0442\u043e \u043d\u0430 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430\u0442\u0430
 
 #: debug/Compiler.java:408
 Please\ import\ the\ SPI\ library\ from\ the\ Sketch\ >\ Import\ Library\ menu.=\u041c\u043e\u043b\u044f, \u0438\u043c\u043f\u043e\u0440\u0442\u0438\u0440\u0430\u0439\u0442\u0435 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430\u0442\u0430 SPI \u043e\u0442 \u043c\u0435\u043d\u044e\u0442\u043e \u0421\u043a\u0438\u0446\u0430 > \u0418\u043c\u043f\u043e\u0440\u0442\u0438\u0440\u0430\u043d\u0435 \u043d\u0430 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430.
@@ -1119,7 +1119,7 @@ Portuguese\ (Portugal)=\u041f\u043e\u0440\u0442\u0443\u0433\u0430\u043b\u0441\u0
 Preferences=\u041f\u0440\u0435\u0434\u043f\u043e\u0447\u0438\u0442\u0430\u043d\u0438\u044f
 
 #: ../../../../../app/src/processing/app/Base.java:297
-!Preparing\ boards...=
+Preparing\ boards...=\u041f\u043e\u0434\u0433\u043e\u0442\u043e\u0432\u043a\u0430 \u043d\u0430 \u043f\u043b\u0430\u0442\u043a\u0438...
 
 #: FindReplace.java:123 FindReplace.java:128
 Previous=\u041f\u0440\u0435\u0434\u0438\u0448\u043d\u043e
@@ -1168,7 +1168,7 @@ Programmer=\u041f\u0440\u043e\u0433\u0440\u0430\u043c\u0430\u0442\u043e\u0440
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:80
 #, java-format
-!Progress\ {0}=
+Progress\ {0}=\u041d\u0430\u043f\u0440\u0435\u0434\u044a\u043a {0}
 
 #: Base.java:783 Editor.java:593
 Quit=\u0418\u0437\u0445\u043e\u0434
