--- a/arduino-core/src/processing/app/i18n/Resources_pt_BR.po
+++ b/arduino-core/src/processing/app/i18n/Resources_pt_BR.po
@@ -23,8 +23,8 @@ msgstr ""
 "Project-Id-Version: Arduino IDE 1.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-03-29 10:24-0400\n"
-"PO-Revision-Date: 2015-11-18 16:15+0000\n"
-"Last-Translator: Federico Fissore <f.fissore@arduino.cc>\n"
+"PO-Revision-Date: 2015-12-07 01:07+0000\n"
+"Last-Translator: Everton Leite <etcholeite@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/mbanzi/arduino-ide-15/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,12 +50,12 @@ msgstr "Usado: {0}"
 msgid ""
 "'Keyboard' not found. Does your sketch include the line '#include "
 "<Keyboard.h>'?"
-msgstr ""
+msgstr "'Keyboard' não encontrado. Existe a linha '#include <Keyboard.h>' no seu sketch?"
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:553
 msgid ""
 "'Mouse' not found. Does your sketch include the line '#include <Mouse.h>'?"
-msgstr ""
+msgstr "'Mouse' não encontrado. Existe a linha '#include <Mouse.h>' no seu sketch?"
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:61
 msgid ""
@@ -232,7 +232,7 @@ msgstr "O arquivo do sketch foi cancelado porque\no sketch não pôde ser salvo 
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:24
 msgid "Arduino"
-msgstr ""
+msgstr "Arduino"
 
 #: ../../../processing/app/I18n.java:83
 msgid "Arduino ARM (32-bits) Boards"
@@ -487,7 +487,7 @@ msgstr "Comentar/descomentar"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:30
 msgid "Communication"
-msgstr ""
+msgstr "Comunicação"
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:266
 msgid "Compiler warnings: "
@@ -499,7 +499,7 @@ msgstr "Compilando sketch..."
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:27
 msgid "Contributed"
-msgstr ""
+msgstr "Contribuiu"
 
 #: Editor.java:1157 Editor.java:2707
 msgid "Copy"
@@ -664,11 +664,11 @@ msgstr "Dinamarquês (Dinamarca)"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:36
 msgid "Data Processing"
-msgstr ""
+msgstr "Processamento de Dados"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:35
 msgid "Data Storage"
-msgstr ""
+msgstr "Armazenamento de Dados"
 
 #: Editor.java:1224 Editor.java:2765
 msgid "Decrease Indent"
@@ -684,7 +684,7 @@ msgstr "Apagar"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:33
 msgid "Device Control"
-msgstr ""
+msgstr "Controle de Dispositivo"
 
 #: debug/Uploader.java:199
 msgid ""
@@ -698,7 +698,7 @@ msgstr "Descartar todas as alterações e recarregar o sketch?"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:29
 msgid "Display"
-msgstr ""
+msgstr "Display"
 
 #: ../../../processing/app/Preferences.java:438
 msgid "Display line numbers"
@@ -917,7 +917,7 @@ msgstr "Erro durante impressão."
 #: ../../../../../arduino-core/src/processing/app/Serial.java:117
 #, java-format
 msgid "Error while setting serial port parameters: {0} {1} {2} {3}"
-msgstr ""
+msgstr "Erro durante a configuração dos parâmetros da porta serial: {0} {1} {2} {3}"
 
 #: ../../../processing/app/BaseNoGui.java:528
 msgid "Error while uploading"
@@ -1229,7 +1229,7 @@ msgstr "Biblioteca adicionada às suas bibliotecas. Veja o menu \"Incluir biblio
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:73
 msgid "Library can't use both 'src' and 'utility' folders. Double check {0}"
-msgstr ""
+msgstr "Bibliotecas não podem usar as pastas 'src' e 'utility' ao mesmo tempo. Verifique {0}"
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:107
 #, java-format
@@ -1459,7 +1459,7 @@ msgstr "Abrir..."
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:37
 msgid "Other"
-msgstr ""
+msgstr "Outro"
 
 #: Editor.java:563
 msgid "Page Setup"
@@ -1467,7 +1467,7 @@ msgstr "Configuração da página"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:25
 msgid "Partner"
-msgstr ""
+msgstr "Parceiro"
 
 #: ../../../processing/app/forms/PasswordAuthorizationDialog.java:44
 msgid "Password:"
@@ -1620,7 +1620,7 @@ msgstr "RETIRADO"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:26
 msgid "Recommended"
-msgstr ""
+msgstr "Recomendado"
 
 #: Editor.java:1138 Editor.java:1140 Editor.java:1390
 msgid "Redo"
@@ -1764,7 +1764,7 @@ msgstr "Enviar"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:32
 msgid "Sensors"
-msgstr ""
+msgstr "Sensores"
 
 #: EditorToolbar.java:41 EditorToolbar.java:46 Editor.java:669
 msgid "Serial Monitor"
@@ -1819,7 +1819,7 @@ msgstr "Mostrar mensagens de saída durante:"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:31
 msgid "Signal Input/Output"
-msgstr ""
+msgstr "Sinal de Entrada/Saída"
 
 #: Editor.java:607
 msgid "Sketch"
@@ -2055,7 +2055,7 @@ msgstr "Pausa para descanso"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:34
 msgid "Timing"
-msgstr ""
+msgstr "Temporização"
 
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:94
 #, java-format
@@ -2128,7 +2128,7 @@ msgstr "Não foi possível alcançar Arduino.cc devido a possíveis problemas de
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:38
 msgid "Uncategorized"
-msgstr ""
+msgstr "Sem categoria"
 
 #: Editor.java:1133 Editor.java:1355
 msgid "Undo"
@@ -2373,7 +2373,7 @@ msgstr "Você não pode renomear o sketch como \"{0}\"\nporque o sketch já tem 
 msgid ""
 "You can't save the sketch as \"{0}\"\n"
 "because the sketch already has a file with that name."
-msgstr ""
+msgstr "Você não pode salvar o sketch como \"{0}\"\nporque o sketch já possui um arquivo com esse nome."
 
 #: Sketch.java:883
 msgid ""
