--- a/arduino-core/src/processing/app/i18n/Resources_ru.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_ru.properties
@@ -20,9 +20,10 @@
 # Oleg Ekhlakov <subspam@mail.ru>, 2014
 # Petr Beklemishev <pbekl@bk.ru>, 2014-2015
 # Petr Beklemishev <pbekl@bk.ru>, 2015
+# \u041c\u0438\u0445\u0430\u0438\u043b \u0422\u0443\u0440\u0443\u0441\u043e\u0432 <god_mihail@mail.ru>, 2015
 # \u0420\u0443\u0441\u043b\u0430\u043d <nasretdinov.r.r@ya.ru>, 2013
 # \u042f\u043a\u043e\u0432 \u041c\u0430\u0441\u043b\u043e\u0432 <jan.s.maslov@gmail.com>, 2015
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-18 16\:15+0000\nLast-Translator\: Federico Fissore <f.fissore@arduino.cc>\nLanguage-Team\: Russian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/ru/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: ru\nPlural-Forms\: nplurals\=4; plural\=(n%10\=\=1 && n%100\!\=11 ? 0 \: n%10>\=2 && n%10<\=4 && (n%100<12 || n%100>14) ? 1 \: n%10\=\=0 || (n%10>\=5 && n%10<\=9) || (n%100>\=11 && n%100<\=14)? 2 \: 3);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-12-10 15\:04+0000\nLast-Translator\: \u041c\u0438\u0445\u0430\u0438\u043b \u0422\u0443\u0440\u0443\u0441\u043e\u0432 <god_mihail@mail.ru>\nLanguage-Team\: Russian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/ru/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: ru\nPlural-Forms\: nplurals\=4; plural\=(n%10\=\=1 && n%100\!\=11 ? 0 \: n%10>\=2 && n%10<\=4 && (n%100<12 || n%100>14) ? 1 \: n%10\=\=0 || (n%10>\=5 && n%10<\=9) || (n%100>\=11 && n%100<\=14)? 2 \: 3);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=\ (\u043d\u0443\u0436\u0435\u043d \u043f\u0435\u0440\u0435\u0437\u0430\u043f\u0443\u0441\u043a Arduino IDE)
@@ -36,10 +37,10 @@
 \ Used\:\ {0}=\ \u0418\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u0435\u0442\u0441\u044f\: {0}
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:558
-!'Keyboard'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Keyboard.h>'?=
+'Keyboard'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Keyboard.h>'?='\u041a\u043b\u0430\u0432\u0438\u0430\u0442\u0443\u0440\u0430' \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u0430. \u0423\u0431\u0435\u0434\u0438\u0442\u0435\u0441\u044c \u0432\u0445\u043e\u0434\u0438\u0442 \u043b\u0438 \u0441\u043a\u0435\u0442\u0447 \u0432 \u043a\u043e\u0434 '\#include <Keyboard.h>'?
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:553
-!'Mouse'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Mouse.h>'?=
+'Mouse'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Mouse.h>'?='\u041c\u044b\u0448\u044c' \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u0430. \u0423\u0431\u0435\u0434\u0438\u0442\u0435\u0441\u044c \u0432\u0445\u043e\u0434\u0438\u0442 \u043b\u0438 \u0441\u043a\u0435\u0442\u0447 \u0432 \u043a\u043e\u0434 '\#include <Mouse.h>'?
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:61
 'arch'\ folder\ is\ no\ longer\ supported\!\ See\ http\://goo.gl/gfFJzU\ for\ more\ information=\u043f\u0430\u043f\u043a\u0430 'arch' \u0431\u043e\u043b\u044c\u0448\u0435 \u043d\u0435 \u043f\u043e\u0434\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u0435\u0442\u0441\u044f\! \u0421\u043c\u043e\u0442\u0440\u0438 \u043f\u043e\u0434\u0440\u043e\u0431\u043d\u0435\u0435 \u043d\u0430 http\://goo.gl/gfFJzU 
@@ -161,7 +162,7 @@ Archive\ sketch\ canceled.=\u0410\u0440\u0445\u0438\u0432\u0430\u0446\u0438\u044
 Archiving\ the\ sketch\ has\ been\ canceled\ because\nthe\ sketch\ couldn't\ save\ properly.=\u0410\u0440\u0445\u0438\u0432\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0441\u043a\u0435\u0442\u0447\u0430 \u0431\u044b\u043b\u043e \u043e\u0442\u043c\u0435\u043d\u0435\u043d\u043e, \u0442\u0430\u043a \u043a\u0430\u043a \n\u0441\u043a\u0435\u0442\u0447 \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d \u0434\u043e\u043b\u0436\u043d\u044b\u043c \u043e\u0431\u0440\u0430\u0437\u043e\u043c.
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:24
-!Arduino=
+Arduino=\u0410\u0440\u0434\u0443\u0438\u043d\u043e
 
 #: ../../../processing/app/I18n.java:83
 Arduino\ ARM\ (32-bits)\ Boards=\u041f\u043b\u0430\u0442\u044b Arduino ARM (32-bits)
@@ -349,7 +350,7 @@ Close=\u0417\u0430\u043a\u0440\u044b\u0442\u044c
 Comment/Uncomment=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c/\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u043a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0439
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:30
-!Communication=
+Communication=\u0421\u0432\u044f\u0437\u044c
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:266
 Compiler\ warnings\:\ =\u0421\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u044f \u043a\u043e\u043c\u043f\u0438\u043b\u044f\u0442\u043e\u0440\u0430\:
@@ -358,7 +359,7 @@ Compiler\ warnings\:\ =\u0421\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u044f \u
 Compiling\ sketch...=\u041a\u043e\u043c\u043f\u0438\u043b\u044f\u0446\u0438\u044f \u0441\u043a\u0435\u0442\u0447\u0430...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:27
-!Contributed=
+Contributed=\u0412\u043d\u0435\u0441\u0435\u043d\u044b
 
 #: Editor.java:1157 Editor.java:2707
 Copy=\u041a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\u0442\u044c
@@ -475,10 +476,10 @@ Czech\ (Czech\ Republic)=\u0427\u0435\u0448\u0441\u043a\u0438\u0439 (\u0420\u043
 Danish\ (Denmark)=\u0414\u0430\u0442\u0441\u043a\u0438\u0439 (\u0414\u0430\u043d\u0438\u044f)
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:36
-!Data\ Processing=
+Data\ Processing=\u041e\u0431\u0440\u0430\u0431\u043e\u0442\u043a\u0430 \u0434\u0430\u043d\u043d\u044b\u0445
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:35
-!Data\ Storage=
+Data\ Storage=\u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0435 \u0434\u0430\u043d\u043d\u044b\u0445
 
 #: Editor.java:1224 Editor.java:2765
 Decrease\ Indent=\u0423\u043c\u0435\u043d\u044c\u0448\u0438\u0442\u044c \u043e\u0442\u0441\u0442\u0443\u043f
@@ -490,7 +491,7 @@ Default=\u041f\u043e \u0443\u043c\u043e\u043b\u0447\u0430\u043d\u0438\u044e
 Delete=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:33
-!Device\ Control=
+Device\ Control=\u0443\u0441\u0442\u0440\u043e\u0439\u0441\u0442\u0432\u043e \u0443\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u044f
 
 #: debug/Uploader.java:199
 Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\ RESET\ the\ board\ right\ before\ exporting=\u041f\u043b\u0430\u0442\u0430 \u043d\u0435 \u043e\u0442\u0432\u0435\u0447\u0430\u0435\u0442, \u043f\u0440\u043e\u0432\u0435\u0440\u044c\u0442\u0435 \u043f\u0440\u0430\u0432\u0438\u043b\u044c\u043d\u043e\u0441\u0442\u044c \u0432\u044b\u0431\u043e\u0440\u0430 \u043f\u043e\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u043d\u043e\u0433\u043e \u043f\u043e\u0440\u0442\u0430 \u0438/\u0438\u043b\u0438 \u043d\u0430\u0436\u043c\u0438\u0442\u0435 RESET \u043d\u0430 \u043f\u043b\u0430\u0442\u0435 \u043f\u0435\u0440\u0435\u0434 \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u043e\u043c
@@ -499,7 +500,7 @@ Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\
 Discard\ all\ changes\ and\ reload\ sketch?=\u041e\u0442\u043c\u0435\u043d\u0438\u0442\u044c \u0432\u0441\u0435 \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f \u0438 \u043f\u0435\u0440\u0435\u0437\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044c \u0441\u043a\u0435\u0442\u0447?
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:29
-!Display=
+Display=\u042d\u043a\u0440\u0430\u043d
 
 #: ../../../processing/app/Preferences.java:438
 Display\ line\ numbers=\u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u043d\u043e\u043c\u0435\u0440\u0430 \u0441\u0442\u0440\u043e\u043a
@@ -664,7 +665,7 @@ Error\ while\ printing.=\u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0435\u0447\
 
 #: ../../../../../arduino-core/src/processing/app/Serial.java:117
 #, java-format
-!Error\ while\ setting\ serial\ port\ parameters\:\ {0}\ {1}\ {2}\ {3}=
+Error\ while\ setting\ serial\ port\ parameters\:\ {0}\ {1}\ {2}\ {3}=\u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u0438 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0435 \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u043e\u0432 \u043f\u043e\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u043d\u043e\u0433\u043e \u043f\u043e\u0440\u0442\u0430\: {0} {1} {2} {3}
 
 #: ../../../processing/app/BaseNoGui.java:528
 Error\ while\ uploading=\u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u0438 \u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0435 \u0432 \u043f\u043b\u0430\u0442\u0443
@@ -691,7 +692,7 @@ Estonian\ (Estonia)=\u042d\u0441\u0442\u043e\u043d\u0441\u043a\u0438\u0439 (\u04
 Examples=\u041f\u0440\u0438\u043c\u0435\u0440\u044b
 
 #: ../../../../../app/src/processing/app/Base.java:1244
-!Examples\ from\ Custom\ Libraries=
+Examples\ from\ Custom\ Libraries=\u041f\u0440\u0438\u043c\u0435\u0440\u044b \u0438\u0437 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0445 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a
 
 #: ../../../../../app/src/processing/app/Base.java:1222
 Examples\ from\ Libraries=\u041f\u0440\u0438\u043c\u0435\u0440\u044b \u0438\u0437 \u0411\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a
